--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
+a, abbr, acrConym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
@@ -212,7 +212,7 @@ body{
         </div>
         <div id="contain2" style="margin: 0 35px 35px 35px;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;background-color: white;box-shadow: 1px 1px 12px rgba(20%,20%,40%,0.5);">
             <div class="row" style="margin: auto;padding: 25px;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;">
-                <h1 style="margin: 0;padding: 0;border: 0;font-size: 18px;font: inherit;vertical-align: baseline;text-align: center;padding-bottom: 30px;">續約付款提供兩種方式，請擇一完成續約付款：</h1>
+                <h1 style="margin: 0;padding: 0;border: 0;font-size: 20px!important;font: inherit;vertical-align: baseline;text-align: center;padding-bottom: 30px;">續約付款提供兩種方式，請擇一完成續約付款：</h1>
                 <div class="box1" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;display: inline-block;width: 143px;">
                     <img src="http://peggy.simular.in/TEST/images/data/EDM/icon2_440b6.jpg" alt="" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;margin-bottom: 25px;">
                 </div>
@@ -226,7 +226,7 @@ body{
 
             <div class="row" style="margin: auto;padding: 25px;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;">
                 <div class="box1" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;display: inline-block;width: 143px;">
-                    <img src="http://peggy.simular.in/TEST/images/data/EDM/icon1_d4c0c.jpg" alt="" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;margin-bottom: 25px;">
+                    <img src="http://peggy.simular.in/TEST/images/data/EDM/icon1_44990.png" alt="" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;margin-bottom: 25px;">
                 </div>
                 <div class="box2" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;display: inline-block;width: 70%;padding-right: 40px;">
                     <h1 style="margin: 15px 0;padding: 0;border: 0;font-size: 18px;font: inherit;vertical-align: baseline;text-align: left;padding-bottom: 0px;font-weight: 700;color: #d35345;">付款方式二： 銀行匯款或ATM轉帳</h1>
@@ -243,7 +243,7 @@ body{
         <h5 style="margin: 0;padding: 0;border: 0;font-size: 15px;font: inherit;vertical-align: baseline;line-height: 1.3em;max-width: 750px;">備註：提醒您如未續約，主機會於到期後自動直接被關閉，主機和網站將無法使用，<span style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;color: #d35345;">主機會於最晚到期日後第五個日曆日內自動刪除。</span>到期後最多五日之緩衝期，為夏木樂網頁設計對貴單位此產品單次免費贈送，不在約定之服務合約內，夏木樂網頁設計保留隨時提早刪除的權利，請客戶提早處理續約事宜。)</h5>
     </div>
     <div id="footer2" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;display: block;padding-top: 28px;background-color: black;height: 80px;max-width: 750px;">
-        <h4 style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;text-align: center;color: white;">夏木樂網頁設計感謝您的長期支持</h4>
+        <h4 style="margin: 0;padding: 8px;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;text-align: center;color: white;">夏木樂網頁設計感謝您的長期支持</h4>
         
         <h4 style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;text-align: center;color: white;">若有任何問題，歡迎來電詢問(02)2592-8369，找楊小姐</h4>
     </div>
