--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ body{
                     <img src="http://peggy.simular.in/TEST/images/data/EDM/icon2_440b6.jpg" alt="" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;margin-bottom: 25px;">
                 </div>
                 <div class="box2" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;display: inline-block;width: 70%;padding-right: 40px;">
-                    <h1 style="margin: 15px 0;padding: 0;border: 0;font-size: 18px;font: inherit;vertical-align: baseline;text-align: left;padding-bottom: 0px;font-weight: 700;color: #d35345;">付款方式一：線上付款</h1>
+                    <h1 style="margin: 15px 0;padding: 0;border: 0;font-size: 18px!important;;font: inherit;vertical-align: baseline;text-align: left;padding-bottom: 0px;font-weight: 700;color: #d35345;">付款方式一：線上付款</h1>
                     <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;">本公司採用智付通第三方金流公司進行收付款作業，提供客戶WebATM、ATM轉帳、超商代碼繳費、條碼繳費等支付方式。 </p>
                     <a href="#" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;"><img src="http://peggy.simular.in/TEST/images/data/EDM/button_06_7e7c7.jpg" alt="" style="margin: 20px 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;"></a>
                 </div>
@@ -229,7 +229,7 @@ body{
                     <img src="http://peggy.simular.in/TEST/images/data/EDM/icon1_44990.png" alt="" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;margin-bottom: 25px;">
                 </div>
                 <div class="box2" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;display: inline-block;width: 70%;padding-right: 40px;">
-                    <h1 style="margin: 15px 0;padding: 0;border: 0;font-size: 18px;font: inherit;vertical-align: baseline;text-align: left;padding-bottom: 0px;font-weight: 700;color: #d35345;">付款方式二： 銀行匯款或ATM轉帳</h1>
+                    <h1 style="margin: 15px 0;padding: 0;border: 0;font-size: 18px!important;font: inherit;vertical-align: baseline;text-align: left;padding-bottom: 0px;font-weight: 700;color: #d35345;">付款方式二： 銀行匯款或ATM轉帳</h1>
                     <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;">中國信託(銀行代碼:822)</p>
                     <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;">中崙分行(匯款代碼0093) </p>
                     <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;">戶名:百岳國際股份有限公司 </p>
