--- a/index.html
+++ b/index.html
@@ -201,24 +201,24 @@ body{
                 <div id="logo" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;">
                     <img src="http://peggy.simular.in/TEST/images/data/EDM/logo_46565.jpg" alt="" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;padding-bottom: 25px;">
                 </div>
-                <h1 style="margin: 0;padding: 0;border: 0;font-size: 18px;font: inherit;vertical-align: baseline;text-align: left;padding-bottom: 0px;">親愛的客戶，您好：</h1>
+                <h1 style="margin: 0;padding: 0;border: 0;font-size: 18px;font: inherit;vertical-align: baseline;text-align: left;padding-bottom: 0px;color:black;">親愛的客戶，您好：</h1>
                 
-                <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;letter-spacing: 1px;line-height: 1.3em;">福潤siroil機油(<a href="http://siroil.cn/" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;">http://siroil.cn/</a>)主機租用帳單到期日為 2017-03-06，提醒您盡早續約完成。</p>
+                <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;letter-spacing: 1px;line-height: 1.3em;color:black;">福潤siroil機油(<a href="http://siroil.cn/" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;">http://siroil.cn/</a>)主機租用帳單到期日為 2017-03-06，提醒您盡早續約完成。</p>
                 <hr>
                 <h2 style="margin: 15px 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;font-weight: 700;color: #d35345;">購買服務明細</h2>
-                <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;letter-spacing: 1px;line-height: 1.3em;">主機空間：(10GB/硬碟空間450GB/月流量)+專屬ip位置</p>
-                <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;letter-spacing: 1px;line-height: 1.3em;">總共金額：新台幣 $6,500 NTD</p>
+                <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;letter-spacing: 1px;line-height: 1.3em;color:black;">主機空間：(10GB/硬碟空間450GB/月流量)+專屬ip位置</p>
+                <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;letter-spacing: 1px;line-height: 1.3em;color:black;">總共金額：新台幣 $6,500 NTD</p>
             </div>
         </div>
         <div id="contain2" style="margin: 0 35px 35px 35px;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;background-color: white;box-shadow: 1px 1px 12px rgba(20%,20%,40%,0.5);">
             <div class="row" style="margin: auto;padding: 25px;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;">
-                <h1 style="margin: 0;padding: 0;border: 0;font-size: 20px!important;font: inherit;vertical-align: baseline;text-align: center;padding-bottom: 30px;">續約付款提供兩種方式，請擇一完成續約付款：</h1>
+                <h1 style="margin: 0;padding: 0;border: 0;font-size: 20px!important;font: inherit;vertical-align: baseline;text-align: center;padding-bottom: 30px;color:black;">續約付款提供兩種方式，請擇一完成續約付款：</h1>
                 <div class="box1" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;display: inline-block;width: 143px;">
                     <img src="http://peggy.simular.in/TEST/images/data/EDM/icon2_440b6.jpg" alt="" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;margin-bottom: 25px;">
                 </div>
                 <div class="box2" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;display: inline-block;width: 70%;padding-right: 40px;">
                     <h1 style="margin: 15px 0;padding: 0;border: 0;font-size: 18px!important;;font: inherit;vertical-align: baseline;text-align: left;padding-bottom: 0px;font-weight: 700;color: #d35345;">付款方式一：線上付款</h1>
-                    <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;">本公司採用智付通第三方金流公司進行收付款作業，提供客戶WebATM、ATM轉帳、超商代碼繳費、條碼繳費等支付方式。 </p>
+                    <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;color:black;">本公司採用智付通第三方金流公司進行收付款作業，提供客戶WebATM、ATM轉帳、超商代碼繳費、條碼繳費等支付方式。 </p>
                     <a href="#" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;"><img src="http://peggy.simular.in/TEST/images/data/EDM/button_06_7e7c7.jpg" alt="" style="margin: 20px 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;"></a>
                 </div>
             </div>
@@ -230,17 +230,17 @@ body{
                 </div>
                 <div class="box2" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;display: inline-block;width: 70%;padding-right: 40px;">
                     <h1 style="margin: 15px 0;padding: 0;border: 0;font-size: 18px!important;font: inherit;vertical-align: baseline;text-align: left;padding-bottom: 0px;font-weight: 700;color: #d35345;">付款方式二： 銀行匯款或ATM轉帳</h1>
-                    <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;">中國信託(銀行代碼:822)</p>
-                    <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;">中崙分行(匯款代碼0093) </p>
-                    <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;">戶名:百岳國際股份有限公司 </p>
-                    <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;">帳號:093540235300</p>
+                    <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;color:black;">中國信託(銀行代碼:822)</p>
+                    <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;color:black;">中崙分行(匯款代碼0093) </p>
+                    <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;color:black;">戶名:百岳國際股份有限公司 </p>
+                    <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;color:black;">帳號:093540235300</p>
                     
-                    <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;">※如採用實體匯款方式，匯款完成後，再請您E-mail至server@simular.co或來電(02)2592-8369進行確認。</p>
+                    <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;color:black;">※如採用實體匯款方式，匯款完成後，再請您E-mail至server@simular.co或來電(02)2592-8369進行確認。</p>
                 </div>
             </div>
         </div>
          <div id="footer1" style="margin: 0;padding: 25px 46px;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;background-color: white;display: block;">
-        <h5 style="margin: 0;padding: 0;border: 0;font-size: 15px;font: inherit;vertical-align: baseline;line-height: 1.3em;max-width: 750px;">備註：提醒您如未續約，主機會於到期後自動直接被關閉，主機和網站將無法使用，<span style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;color: #d35345;">主機會於最晚到期日後第五個日曆日內自動刪除。</span>到期後最多五日之緩衝期，為夏木樂網頁設計對貴單位此產品單次免費贈送，不在約定之服務合約內，夏木樂網頁設計保留隨時提早刪除的權利，請客戶提早處理續約事宜。)</h5>
+        <h5 style="margin: 0;padding: 0;border: 0;font-size: 15px;font: inherit;vertical-align: baseline;line-height: 1.3em;max-width: 750px;color:black;">備註：提醒您如未續約，主機會於到期後自動直接被關閉，主機和網站將無法使用，<span style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;color: #d35345;">主機會於最晚到期日後第五個日曆日內自動刪除。</span>到期後最多五日之緩衝期，為夏木樂網頁設計對貴單位此產品單次免費贈送，不在約定之服務合約內，夏木樂網頁設計保留隨時提早刪除的權利，請客戶提早處理續約事宜。)</h5>
     </div>
     <div id="footer2" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;display: block;padding-top: 28px;background-color: black;height: 80px;max-width: 750px;">
         <h4 style="margin: 0;padding: 8px;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;text-align: center;color: white;">夏木樂網頁設計感謝您的長期支持</h4>
