--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ body{
                 </div>
                 <h1 style="margin: 0;padding: 0;border: 0;font-size: 18px;font: inherit;vertical-align: baseline;text-align: left;padding-bottom: 0px;color:black;">親愛的客戶，您好：</h1>
                 
-                <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;letter-spacing: 1px;line-height: 1.3em;color:black;">福潤siroil機油(<a href="http://siroil.cn/" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;">http://siroil.cn/</a>)主機租用帳單到期日為 2017-03-06，提醒您盡早續約完成。</p>
+                <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;letter-spacing: 1px;line-height: 1.3em;color:black;">福潤siroil機油(<a href="http://siroil.cn/"target="_blank" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;">http://siroil.cn/</a>)主機租用帳單到期日為 2017-03-06，提醒您盡早續約完成。</p>
                 <hr>
                 <h2 style="margin: 15px 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;font-weight: 700;color: #d35345;">購買服務明細</h2>
                 <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;letter-spacing: 1px;line-height: 1.3em;color:black;">主機空間：(10GB/硬碟空間450GB/月流量)+專屬ip位置</p>
@@ -219,7 +219,7 @@ body{
                 <div class="box2" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;display: inline-block;width: 70%;padding-right: 40px;">
                     <h1 style="margin: 15px 0;padding: 0;border: 0;font-size: 18px!important;;font: inherit;vertical-align: baseline;text-align: left;padding-bottom: 0px;font-weight: 700;color: #d35345;">付款方式一：線上付款</h1>
                     <p style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;line-height: 1.3em;width: 90%;color:black;">本公司採用智付通第三方金流公司進行收付款作業，提供客戶WebATM、ATM轉帳、超商代碼繳費、條碼繳費等支付方式。 </p>
-                    <a href="#" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;"><img src="http://peggy.simular.in/TEST/images/data/EDM/button_06_7e7c7.jpg" alt="" style="margin: 20px 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;"></a>
+                    <a href="https://core.spgateway.com/EPG/simular/SZPLFs"target="_blank" style="margin: 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;"><img src="http://peggy.simular.in/TEST/images/data/EDM/button_06_7e7c7.jpg" alt="" style="margin: 20px 0;padding: 0;border: 0;font-size: 100%;font: inherit;vertical-align: baseline;"></a>
                 </div>
             </div>
             <hr style="margin: 0 25px;">
